--- a/styles.css
+++ b/styles.css
@@ -41,5 +41,50 @@ ul{
     align-items: center;
 
 }
+h1{
+    font-size: 48;
+    font-weight: bolder;
+    color: #f9faf8;
+
+}
+.content{
+    display: flex;
+    flex-direction: row;
+    margin: 50px;
+}
+
+.content-left{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+    margin-left: 200px;
+
+}
+.content-right{
+    display: flex;
+    justify-content: center;
+
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
 
 
+}
+img{
+    margin: 50px;
+}
+.p-style{
+    font-size: 18px;
+    color: #e5e7eb;
+    
+
+}
+
+.sign-up-first-section{
+    background-color: #3882f6;
+    width: 100px;
+    height: 40px;
+    border:1px;
+    border-radius: 10px;
+}
