--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ h1{
 img{
     margin: 50px;
 }
-.p-style{
+.p-first{
     font-size: 18px;
     color: #e5e7eb;
     
@@ -87,4 +87,116 @@ img{
     height: 40px;
     border:1px;
     border-radius: 10px;
+}
+
+h2{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+
+}
+
+.row-of-blue-divs{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 100%;
+    margin:100px;
+    align-items: center;
+}
+
+.blue-box{
+    border: 2px solid #3882f6;
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+}
+
+.second-section{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+.p-second{
+    text-align: center;
+    font-size: 18px;
+}
+
+.third-section{
+    background-color: #e5e7eb;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+h3{
+    font-size: 36px;
+    font-style: italic;
+    font-weight:lighter;
+    color: #1f2937;
+    text-align: center;
+}
+.p-third{
+
+    font-size: 18px;
+    text-align: right;
+    margin-right: 300px;
+    
+}
+
+.forth-section{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.blue-oblong{
+    background-color: #3882f6;
+    width: 75%;
+    height: 40%;
+    display: flex;
+    flex-direction: row;
+
+}
+    
+.left{
+    width: 80%;
+    margin-left: 100px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+h4{
+    font-size: 24px;
+    color: #e5e7eb;
+
+}
+
+.final-p{
+    color: #f9faf8;
+    font-size: 18px;
+
+}
+
+.right{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.sign-up-forth-section{
+    background-color: #3882f6;
+    width: 100px;
+    height: 40px;
+    border:1px solid #f9faf8;
+    border-radius: 10px;
+
 }
