ADDED footer. CHANGED font.

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ img{
 }
 
 .sign-up-first-section{
+    color: #e5e7eb;
     background-color: #3882f6;
     width: 100px;
     height: 40px;
@@ -193,10 +194,19 @@ h4{
 }
 
 .sign-up-forth-section{
+    color: #f9faf8;
     background-color: #3882f6;
     width: 100px;
     height: 40px;
     border:1px solid #f9faf8;
     border-radius: 10px;
 
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    color: #e5e7eb;
+    height: 75px;
 }
